--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Text Jail</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style/main.css">
+	<script src="script/perfectloop.js"></script>
 </head>
 <body>
 	<div id="canvas-container">
 		<canvas id="view-canvas"></canvas>
 	</div>
-	<script src="main.js"></script>
+	<script src="script/main.js"></script>
 </body>
 </html>
